Fixed hover state in dark mode

--- a/modules/social-icons/social-icons.css
+++ b/modules/social-icons/social-icons.css
@@ -15,11 +15,6 @@ social-icons ul {
 }
 
 .logo a:hover {
-	fill: var(--background);
+	fill: var(--lightest);
 }
 
-@media (min-width: 700px) {
-	.logo a:hover {
-		fill: var(--paper);
-	}
-}
