--- a/styles/site.css
+++ b/styles/site.css
@@ -28,16 +28,16 @@ body {
 	grid-template-columns:  auto repeat(12, minmax(0, 120px)) auto;
 	min-height: 100vh;
 	grid-template-rows: auto auto auto 1fr 1fr 1fr 1fr 1fr auto;
-	font-family: Rubik;
+	font-family: var(--sans-serif);
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .background {
-	grid-column: 1 / -1;
+	grid-column: 1 / 15;
 	grid-row:  1 / 3;
 	background-color: var(--background);
-	/*transition: 1s ease-in-out;*/
+	transition: 1s ease-in-out;
 }
 
 nav a.active {
